# Projekt-Grafika-Komputerowa

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
shaders/: path.vert  shader_1_1.frag  shader_1_1.vert  shader_1_2.frag  shader_1_2.vert  shader_3_1.frag  shader_3_1.vert  shader_3_2.frag  shader_3_2.vert
src/: Camera.cpp  Camera.h  Pathfinder.cpp  Pathfinder.h  Render_Utils.cpp  Render_Utils.h  Shader_Loader.h  Snow.h  main.cpp
